# EchoSpectrum

./: README.md  pyproject.toml  requirements.txt  signalforge.manifest.json
.github/workflows/: platform-validation.yml
api/: main.py
api/routers/: governance.py  ingest.py  mesh.py  replay.py  router_index.py
config/: christina.runner.json
config/environments/: README.md
config/research/: authorized_research.profile.json  lab_environment.profile.json
contracts/: incident.observation.v1.schema.json  rf.complianceDecision.v1.schema.json  rf.researchSession.v1.schema.json  rf.sensorNode.v1.schema.json
deployments/azure/: README.md
deployments/signalforge/: edge-node.profile.json
docs/architecture/: ARCHITECTURE_STANDARDS.md  ASYNC_STREAMING_ARCHITECTURE.md  OBSERVATORY_UI.md
docs/governance/: AUTHORIZED_RESEARCH_MODE.md  GOVERNANCE_SDK.md
docs/integrations/: CHRISTINA_AUTOMATION.md  LANTERN_STACK_INTEGRATION.md  OPSHELM_INTEGRATION.md  SIGNALFORGE_ORCHESTRATION.md
docs/research/: AI_SIGNAL_CLASSIFICATION.md  DIRECTIONAL_MAPPING.md
echospectrum/: __init__.py
frontend/: index.html  package.json
policies/: protected-spectrum-registry.json
tests/: test_ai_classifier.py  test_api_routes.py  test_async_streaming.py  test_christina_config.py  test_compliance_engine.py  test_directional_mapping.py  test_governance_sdk.py  test_opshelm_export.py  test_receive_only_policy.py  test_research_authorization.py  test_signalforge_contracts.py  test_signalforge_manifest.py  test_synthetic_dataset.py  test_synthetic_events.py
tools/: validate_contracts.py
(+36 files in other folders)
